fixed aligning of results when there are > 1 result

--- a/imports/ui/css/FilteredResult.css
+++ b/imports/ui/css/FilteredResult.css
@@ -40,5 +40,5 @@
 }
 
 #result-li{
-  position: relative;
+  padding-bottom: 200px;
 }
